--- a/index.html
+++ b/index.html
@@ -5,150 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-    }
-
-    header {
-      background-color: #66e0d4;
-      padding: 1em;
-      text-align: center;
-      color: white;
-    }
-
-    #company-logo {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    #productos-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 12px;
-      padding: 20px;
-      justify-items: center;
-    }
-
-    .producto-tarjeta {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 12px;
-      width: 150px;
-      text-align: center;
-      background-color: white;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    .producto-imagen {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .producto-nombre {
-      font-size: 14px;
-      margin: 6px 0;
-      color: #333;
-    }
-
-    .producto-precio {
-      font-size: 13px;
-      color: #666;
-    }
-
-    .producto-boton {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background-color: #007acc;
-      border: none;
-      border-radius: 50%;
-      color: white;
-      width: 30px;
-      height: 30px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #carrito {
-      padding: 20px;
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-    }
-
-    #botonAdmin {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      font-size: 24px;
-      background: #007acc;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      cursor: pointer;
-    }
-
-    .admin-button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #66e0d4;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input-edit {
-      width: 100%;
-      margin: 5px 0;
-    }
-
+    /* ... (tu CSS exacto, sin cambios) ... */
   </style>
 </head>
 <body>
@@ -173,35 +30,18 @@
     </section>
   </main>
 
-  <!-- Modal -->
+  <!-- Modal admin (sin cambios) -->
   <div id="adminModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Panel de Administración</h2>
-      <form id="formulario-producto">
-        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required class="input-edit">
-        <input type="number" id="precioProducto" placeholder="Precio" required class="input-edit">
-        <input type="text" id="categoriaProducto" placeholder="Categoría" required class="input-edit">
-        <input type="file" id="imagenProducto" accept="image/*" required class="input-edit">
-        <button type="submit" class="admin-button">Agregar Desayuno</button>
-      </form>
-      <hr>
-      <h3>Desayunos Agregados</h3>
-      <div id="productos-agregados"></div>
-      <hr>
-      <h3>Cambiar Logo</h3>
-      <input type="file" id="logoInput" accept="image/*" class="input-edit"/>
-      <button onclick="cambiarLogo()" class="admin-button">Cambiar Logo</button>
-    </div>
+    <!-- ... tu HTML de modal ... -->
   </div>
-
   <button id="botonAdmin">⚙️</button>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase + Realtime Database -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, set, push, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+    import {
+      getDatabase, ref, onValue, push, update, remove
+    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
@@ -215,70 +55,151 @@
     };
 
     const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-    const analytics = getAnalytics(app);
+    const db = getDatabase(app);
 
     let productos = [];
+    let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+    let categoriaSeleccionada = "todas";
 
-    // Cargar productos desde Firebase
-    const productosRef = ref(database, 'productos');
-    onValue(productosRef, (snapshot) => {
-      if (snapshot.exists()) {
-        productos = Object.values(snapshot.val());
-        localStorage.setItem("productos", JSON.stringify(productos));
-        actualizarVista();
-      } else {
-        console.log("No hay productos disponibles.");
-      }
+    const productosContainer = document.getElementById("productos-container");
+    const productosAgregados = document.getElementById("productos-agregados");
+    const selectorCategoria = document.getElementById("selector-categoria");
+
+    // 1. Cargar productos en tiempo real
+    const productosRef = ref(db, 'productos');
+    onValue(productosRef, snapshot => {
+      productos = [];
+      snapshot.forEach(child => {
+        productos.push({ key: child.key, ...child.val() });
+      });
+      actualizarVista();
     });
 
-    // Función para actualizar la vista de productos
+    // 2. Agregar producto (desde el formulario)
+    document.getElementById("formulario-producto")
+      .addEventListener("submit", e => {
+        e.preventDefault();
+        const nombre = document.getElementById("nombreProducto").value;
+        const precio = document.getElementById("precioProducto").value;
+        const categoria = document.getElementById("categoriaProducto").value;
+        const imagenFile = document.getElementById("imagenProducto").files[0];
+        const reader = new FileReader();
+        reader.onloadend = () => {
+          push(productosRef, {
+            nombre, precio, categoria, imagen: reader.result
+          });
+        };
+        reader.readAsDataURL(imagenFile);
+        e.target.reset();
+      });
+
+    // 3. Funciones de edición y borrado
+    window.eliminarProducto = key => {
+      remove(ref(db, `productos/${key}`));
+    };
+    window.editarProducto = (key, campo, valor) => {
+      update(ref(db, `productos/${key}`), { [campo]: valor });
+    };
+    window.editarImagen = (key, input) => {
+      const file = input.files[0];
+      const r = new FileReader();
+      r.onloadend = () => {
+        update(ref(db, `productos/${key}`), { imagen: r.result });
+      };
+      r.readAsDataURL(file);
+    };
+
+    // 4. Mostrar productos y admin
     function actualizarVista() {
-      const productosContainer = document.getElementById("productos-container");
       productosContainer.innerHTML = '';
-      productos.forEach(producto => {
-        const tarjeta = `
+      productosAgregados.innerHTML = '';
+      actualizarSelectorCategorias();
+
+      const lista = categoriaSeleccionada === "todas"
+        ? productos
+        : productos.filter(p => p.categoria === categoriaSeleccionada);
+
+      lista.forEach(p => {
+        productosContainer.innerHTML += `
           <div class="producto-tarjeta">
-            <img src="${producto.imagen}" class="producto-imagen">
-            <div class="producto-nombre">${producto.nombre}</div>
-            <div class="producto-precio">$${producto.precio}</div>
-            <div class="producto-categoria">${producto.categoria}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito('${producto.nombre}')">🛒</button>
+            <img src="${p.imagen}" class="producto-imagen">
+            <div class="producto-nombre">${p.nombre}</div>
+            <div class="producto-precio">$${p.precio}</div>
+            <div class="producto-categoria">${p.categoria}</div>
+            <button class="producto-boton" onclick="agregarAlCarrito('${p.key}')">🛒</button>
           </div>`;
-        productosContainer.innerHTML += tarjeta;
+        productosAgregados.innerHTML += `
+          <div class="producto-tarjeta">
+            <img src="${p.imagen}" class="producto-imagen">
+            <input class="input-edit" type="text" value="${p.nombre}"
+              onchange="editarProducto('${p.key}', 'nombre', this.value)">
+            <input class="input-edit" type="number" value="${p.precio}"
+              onchange="editarProducto('${p.key}', 'precio', this.value)">
+            <input class="input-edit" type="text" value="${p.categoria}"
+              onchange="editarProducto('${p.key}', 'categoria', this.value)">
+            <input class="input-edit" type="file" onchange="editarImagen('${p.key}', this)">
+            <button class="admin-button" onclick="eliminarProducto('${p.key}')">Eliminar</button>
+          </div>`;
       });
     }
 
-    // Función para agregar producto al carrito
-    let carrito = [];
-    function agregarAlCarrito(nombre) {
-      const producto = productos.find(p => p.nombre === nombre);
-      carrito.push(producto);
-      actualizarCarrito();
+    function actualizarSelectorCategorias() {
+      const cats = ["todas", ...new Set(productos.map(p => p.categoria))];
+      selectorCategoria.innerHTML = cats.map(cat =>
+        `<option value="${cat}" ${cat===categoriaSeleccionada?'selected':''}>${cat}</option>`
+      ).join('');
     }
+    window.filtrarCategoria = () => {
+      categoriaSeleccionada = selectorCategoria.value;
+      actualizarVista();
+    };
 
-    // Función para actualizar el carrito visualmente
+    // 5. Carrito (localStorage)
+    window.agregarAlCarrito = key => {
+      const p = productos.find(x => x.key === key);
+      carrito.push(p);
+      localStorage.setItem("carrito", JSON.stringify(carrito));
+      actualizarCarrito();
+    };
     function actualizarCarrito() {
-      const listaCarrito = document.getElementById("lista-carrito");
-      listaCarrito.innerHTML = '';
+      const ul = document.getElementById("lista-carrito");
+      ul.innerHTML = '';
       let total = 0;
-      carrito.forEach(producto => {
-        const li = document.createElement("li");
-        li.textContent = `${producto.nombre} - $${producto.precio}`;
-        listaCarrito.appendChild(li);
-        total += parseFloat(producto.precio);
+      carrito.forEach(p => {
+        ul.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
+        total += parseFloat(p.precio);
       });
       document.getElementById("total").textContent = total.toFixed(2);
     }
-
-    // Función de compra
-    function comprar() {
-      alert("Gracias por tu compra");
+    window.comprar = () => {
+      if (!carrito.length) return alert("Tu carrito está vacío.");
+      alert("¡Gracias por tu compra!");
       carrito = [];
+      localStorage.setItem("carrito", "[]");
       actualizarCarrito();
+    };
+
+    // Logo en localStorage (igual que antes)
+    function cambiarLogo() {
+      const f = document.getElementById("logoInput").files[0];
+      const r = new FileReader();
+      r.onloadend = () => {
+        document.getElementById("company-logo").src = r.result;
+        localStorage.setItem("logoEmpresa", r.result);
+      };
+      r.readAsDataURL(f);
+    }
+    window.cambiarLogo = cambiarLogo;
+    function cargarLogo() {
+      const l = localStorage.getItem("logoEmpresa");
+      if (l) document.getElementById("company-logo").src = l;
     }
 
+    // Inicia todo al cargar página
+    window.onload = () => {
+      cargarLogo();
+      actualizarCarrito();
+    };
   </script>
-
 </body>
 </html>
